<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Endika Aguilera on 15/12/2018.
  ~ Copyright: (c) 2018 Endika Aguilera. All rights reserved.
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Temporal Main Activity View"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/obBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/obBtn"
        style="@style/ButtonRed"
        android:text="@string/on_boarding"
        app:layout_constraintBottom_toTopOf="@+id/pmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pmBtn"
        style="@style/ButtonRed"
        android:text="@string/popular_movies"
        app:layout_constraintBottom_toTopOf="@+id/iaBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/iaBtn"
        style="@style/ButtonRed"
        android:text="@string/itunes_api"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/baBtn"
        style="@style/ButtonRed"
        android:text="@string/baking_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iaBtn" />

    <Button
        android:id="@+id/xyBtn"
        style="@style/ButtonRed"
        android:text="@string/xyz_reader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baBtn" />

</android.support.constraint.ConstraintLayout>